<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg"
        android:orientation="vertical"
        tools:showIn="@layout/activity_my"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:text="@string/heading"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.30"
                android:padding="5sp"
                android:text="@string/street_address"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/street_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.70"
                android:ems="10" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.27"
                android:padding="5sp"
                android:text="@string/city"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/city"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.70"
                android:ems="10" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.30"
                android:padding="5sp"
                android:text="@string/state_label"
                android:textSize="25sp" />

            <Spinner
                android:id="@+id/state_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.70"
                android:orientation="vertical"
                android:prompt="@string/state_label" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5sp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.30"
                android:text="@string/degree_label"
                android:textSize="25sp" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.70"
                android:orientation="horizontal">

                <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/temp_unit"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/fahrenheit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onRadioButtonClicked"
                        android:text="@string/degree_fahrenheit"
                        android:checked="true"/>

                    <RadioButton
                        android:id="@+id/celsius"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onRadioButtonClicked"
                        android:text="@string/degree_celsius" />
                </RadioGroup>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="5"
                android:onClick="search"
                android:text="@string/search" />

            <Button
                android:id="@+id/btnClear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="5"
                android:text="@string/clear"
                android:onClick="clear"/>
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:paddingBottom="150dp"
        android:paddingLeft="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/errorText"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/colorAccent"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:padding="20dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="About"
            android:onClick="launchAboutActivity"/>
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:paddingRight="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Powered By: "/>
        <ImageView
            android:id="@+id/forecast_logo"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:onClick="loadUrl"
            android:scaleType="fitXY"
            android:src="@drawable/forecast_logo" />
    </RelativeLayout>

</RelativeLayout>

