<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:showIn="@layout/activity_result"
    tools:context="com.example.supriyaanand.weatherforecast.ResultActivity">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="More Details"
                android:onClick="onMoreDetailsClicked"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="View Map"
                android:onClick="onViewMapClicked"/>
            </LinearLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true">
                <Button
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:onClick="onShareToFB"
                    android:background="@drawable/fb_icon"
                    android:layout_gravity="right"
                    android:paddingRight="20dp"/>
            </RelativeLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/curConImage"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:scaleType="fitXY"
                android:gravity="center"
                android:padding="25dp"
                android:paddingLeft="25dp"
                android:paddingTop="25dp"
                android:paddingRight="25dp"
                android:paddingBottom="20dp"
                android:layout_gravity="center"/>
            <TextView
                    android:id="@+id/curConString"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:padding="5sp"
                    android:layout_gravity="center"
                    android:textColor="#000000"/>
            <TextView
                android:id="@+id/curTempString"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="35sp"
                android:padding="15sp"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/highLowTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="20sp"/>
        </LinearLayout>

        <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="1">
            <TableRow
                android:layout_width="fill_parent"
                android:paddingTop="15sp"
                android:paddingBottom="10sp">
                <TextView
                    android:text="@string/precipitation"
                    android:padding="3dip"
                    android:textSize="25sp"/>
                <TextView
                    android:id="@+id/precip"
                    android:gravity="right"
                    android:padding="5dip"
                    android:textSize="25sp"
                    android:layout_gravity="right"/>
            </TableRow>
            <TableRow
                android:layout_width="fill_parent"
                android:paddingTop="10sp"
                android:paddingBottom="10sp">
                <TextView
                    android:text="@string/chanceOfRain"
                    android:padding="3dip"
                    android:textSize="25sp"/>
                <TextView
                    android:id="@+id/rain"
                    android:gravity="right"
                    android:padding="5dip"
                    android:textSize="25sp"
                    android:layout_gravity="right"/>
            </TableRow>
            <TableRow android:layout_width="fill_parent"
                android:paddingTop="10sp"
                android:paddingBottom="10sp">
                <TextView
                    android:text="@string/windSpeed"
                    android:padding="3dip"
                    android:textSize="25sp"/>
                <TextView
                    android:id="@+id/windSpeed"
                    android:gravity="right"
                    android:padding="5dip"
                    android:textSize="25sp"
                    android:layout_gravity="right"/>
            </TableRow>
            <TableRow
                android:layout_width="fill_parent"
                android:paddingTop="10sp"
                android:paddingBottom="10sp">
                <TextView
                    android:text="@string/dewPoint"
                    android:padding="3dip"
                    android:textSize="25sp"/>
                <TextView
                    android:id="@+id/dewPoint"
                    android:gravity="right"
                    android:padding="5dip"
                    android:textSize="25sp"
                    android:layout_gravity="right"/>
            </TableRow>
            <TableRow
                android:layout_width="fill_parent"
                android:paddingTop="10sp"
                android:paddingBottom="10sp">
                <TextView
                    android:text="@string/humidity"
                    android:padding="3dip"
                    android:textSize="25sp"/>
                <TextView
                    android:id="@+id/humidity"
                    android:gravity="right"
                    android:padding="5dip"
                    android:textSize="25sp"
                    android:layout_gravity="right"/>
            </TableRow>
            <TableRow
                android:layout_width="fill_parent"
                android:paddingTop="10sp"
                android:paddingBottom="10sp">
                <TextView
                    android:text="@string/visibility"
                    android:padding="3dip"
                    android:textSize="25sp"/>
                <TextView
                    android:id="@+id/visibility"
                    android:gravity="right"
                    android:padding="5dip"
                    android:textSize="25sp"
                    android:layout_gravity="right"/>
            </TableRow>
            <TableRow
                android:layout_width="fill_parent"
                android:paddingTop="10sp"
                android:paddingBottom="10sp">
                <TextView
                    android:text="@string/sunRise"
                    android:padding="3dip"
                    android:textSize="25sp"/>
                <TextView
                    android:id="@+id/sunRiseVal"
                    android:gravity="right"
                    android:padding="5dip"
                    android:textSize="25sp"
                    android:layout_gravity="right"/>
            </TableRow>
            <TableRow
                android:layout_width="fill_parent"
                android:paddingTop="10sp"
                android:paddingBottom="10sp">
                <TextView
                    android:text="@string/sunSet"
                    android:padding="3dip"
                    android:textSize="25sp"/>
                <TextView
                    android:id="@+id/sunSetVal"
                    android:gravity="right"
                    android:padding="5dip"
                    android:textSize="25sp"
                    android:layout_gravity="right"/>
            </TableRow>
        </TableLayout>
    </LinearLayout>

</ScrollView>
